--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,10 @@ html {
 }
 
 #Header-container #Logo-link {
-  grid-area: Logo;
   max-height: 16vh;
   padding-top: 1vh;
   padding-bottom: 1vh;
+  text-decoration: none;
 }
 
 #Header-container .Phonenumber-class {
@@ -70,23 +70,10 @@ html {
   height: 100%;
 }
 
-#Content-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: minmax(50vh, auto);
-      grid-template-rows: minmax(50vh, auto);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  justify-items: center;
-}
-
 #Content-container #Hungry-banner {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 70vh;
   background-image: url(../Images/Pizza.jpg);
   background-repeat: no-repeat;
   background-size: 100vw;
@@ -96,7 +83,7 @@ html {
   position: absolute;
   top: 20vh;
   left: 57%;
-  width: 20%;
+  width: 30%;
   height: 30%;
   text-align: center;
 }
@@ -109,10 +96,10 @@ html {
           box-shadow: 1px 1px 3px #000000;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border: solid 2px #000000;
-  margin-bottom: 6px;
+  text-decoration: none;
 }
 
 #Content-container #Hungry-banner #Hungry-text .Hungry-answer {
@@ -123,6 +110,24 @@ html {
   display: inline;
 }
 
+#Content-container #Homepage-text {
+  border-top: solid 2px #796F5B;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+  padding-top: 5vh;
+  margin: 5vh 10vw 10vh 10vw;
+}
+
+#Content-container #Tossing-pizza-container {
+  width: 40vw;
+}
+
+#Content-container #Tossing-pizza-container #Tossing-pizza {
+  width: 100%;
+  position: relative;
+  left: 30vw;
+}
+
 #Content-container #Opening-hours {
   padding: 10vh 7vw 10vh 7vw;
   margin: 15vh 10vw 15vh 10vw;
@@ -131,12 +136,6 @@ html {
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   text-align: center;
-}
-
-#Content-container #Homepage-text {
-  font-family: "Raleway", sans-serif;
-  text-align: center;
-  margin: 15vh 10vw 15vh 10vw;
 }
 
 .Menu-headers {
@@ -158,15 +157,12 @@ html {
   -webkit-column-gap: 5vh;
           column-gap: 5vh;
   row-gap: 6vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   justify-items: center;
 }
 
 .Menu-grid .Pizza-item-container {
   width: 330px;
-  height: 400px;
+  height: 415px;
   background-color: white;
   border: 1px solid #796F5B;
   border-radius: 5px;
@@ -176,28 +172,8 @@ html {
           align-items: center;
 }
 
-.Menu-grid .Pizza-item-container .Menu-images {
-  width: 90%;
-  border-radius: 10px;
-}
-
-.Menu-grid .Pizza-item-container .Pizza-header {
-  font-size: 1.1rem;
-  font-family: "Montserrat", sans-serif;
-  color: #796F5B;
-  margin: 5px;
-  padding: 2px;
-}
-
-.Menu-grid .Pizza-item-container .Pizza-text {
-  font-size: 0.8rem;
-  font-family: "Raleway", sans-serif;
-  margin: 4px;
-  color: #796F5B;
-}
-
 .Menu-grid .Menu-item-container {
-  width: 330px;
+  width: 340px;
   height: 200px;
   background-color: white;
   border: 1px solid #796F5B;
@@ -208,20 +184,29 @@ html {
           align-items: center;
 }
 
-.Menu-grid .Menu-item-container .Menu-images {
+.Menu-grid .Menu-images {
   width: 90%;
   border-radius: 10px;
 }
 
-.Menu-grid .Menu-item-container .Pizza-header {
+.Menu-grid .Menu-header {
   font-size: 1.1rem;
   font-family: "Montserrat", sans-serif;
-  color: #796F5B;
+  color: #A73127;
   margin: 5px;
   padding: 2px;
+  display: inline-block;
 }
 
-.Menu-grid .Menu-item-container .Pizza-text {
+.Menu-grid .Menu-prices {
+  font-family: "Raleway", sans-serif;
+  color: #796F5B;
+  font-size: 1.1rem;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.Menu-grid .Menu-text {
   font-size: 0.8rem;
   font-family: "Raleway", sans-serif;
   margin: 4px;
@@ -234,8 +219,8 @@ html {
   margin: 10vh 6vw 5vh 6vw;
   -ms-grid-columns: 2fr 1fr;
       grid-template-columns: 2fr 1fr;
-  -ms-grid-rows: 2fr 1fr;
-      grid-template-rows: 2fr 1fr;
+  -ms-grid-rows: 3fr 2fr;
+      grid-template-rows: 3fr 2fr;
   justify-items: center;
   -webkit-column-gap: 4vw;
           column-gap: 4vw;
@@ -272,13 +257,22 @@ html {
 
 #Location {
   width: 100vw;
-  height: 100vh;
+}
+
+#Location #Location-header {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2rem;
+  color: #796F5B;
+  border-top: solid 2px #796F5B;
+  text-align: center;
+  margin-left: 4vw;
+  margin-right: 4vw;
+  padding-top: 5vh;
 }
 
 #Location #Maps-location {
-  padding: 5vh 4vw 15vh 4vw;
+  padding: 5vh 4vw 10vh 4vw;
   margin: 0vh 6vw 0vh 6vw;
-  border-top: solid 2px #796F5B;
   width: 80%;
   height: 500px;
 }
@@ -300,9 +294,8 @@ html {
   text-align: right;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (orientation: portrait) {
   #Header-container {
-    top: -17px;
     -ms-grid-rows: 17vh (4vh)[3];
         grid-template-rows: 17vh repeat(3, 4vh);
     -ms-grid-columns: 1fr;
@@ -318,6 +311,9 @@ html {
   #Phonenumber-text {
     display: none;
   }
+  #Content-container #Hungry-banner {
+    height: 40vh;
+  }
   #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
     top: 13vh;
@@ -325,11 +321,25 @@ html {
     width: 40%;
     height: 30%;
   }
+  #Content-container #Opening-hours {
+    font-size: 2.0rem;
+  }
+  #About-us-grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    margin: 2vh 3vw 3vh 3vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 0.9rem;
+  }
 }
 
 @media (max-width: 412px) {
   #Header-container {
-    top: -125px;
+    top: -120px;
     -ms-grid-rows: 17vh (6vh)[3];
         grid-template-rows: 17vh repeat(3, 6vh);
     -ms-grid-columns: 1fr;
@@ -345,12 +355,35 @@ html {
   #Phonenumber-text {
     display: none;
   }
+  #Content-container #Homepage-text {
+    padding-top: 5vh;
+    margin: 0vh 10vw 3vh 10vw;
+  }
+  #Content-container #Hungry-banner {
+    height: 40vh;
+  }
   #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
     top: 5vh;
     left: 20%;
     width: 60%;
     height: 30%;
+  }
+  #Content-container #Tossing-pizza-container {
+    width: 100vw;
+  }
+  #Content-container #Tossing-pizza-container #Tossing-pizza {
+    left: 0;
+  }
+  #Content-container #Opening-hours {
+    font-size: 1.8rem;
+    margin: 5vh 10vw 5vh 10vw;
+  }
+  #About-us-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 190px 1fr 220px 1fr;
+        grid-template-rows: 190px 1fr 220px 1fr;
   }
   #Location #Maps-location {
     height: 400px;
