--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ html {
   justify-items: center;
   font-family: "Montserrat", sans-serif;
   color: #F2E8D9;
+  -webkit-box-shadow: 2px 0px 2px #000000;
+          box-shadow: 2px 0px 2px #000000;
   font-size: 1.2rem;
   -ms-grid-columns: (minmax(216px, auto))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(216px, auto));
@@ -81,17 +83,10 @@ html {
 
 #Content-container #Hungry-banner #Hungry-text {
   position: absolute;
-  top: 20vh;
+  top: 24vh;
   left: 57%;
   width: 30%;
-  height: 30%;
   text-align: center;
-}
-
-#Content-container #Hungry-banner #Hungry-text #Hungry-question {
-  color: #F2E8D9;
-  font-family: "Montserrat", sans-serif;
-  font-size: 1.7rem;
   -webkit-box-shadow: 1px 1px 3px #000000;
           box-shadow: 1px 1px 3px #000000;
   padding-left: 10px;
@@ -99,23 +94,26 @@ html {
   padding-top: 5px;
   padding-bottom: 5px;
   border: solid 2px #000000;
+}
+
+#Content-container #Hungry-banner #Hungry-text #Hungry-question {
+  color: #F2E8D9;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.9rem;
   text-decoration: none;
 }
 
 #Content-container #Hungry-banner #Hungry-text .Hungry-answer {
   color: #F2E8D9;
   font-family: "Raleway", sans-serif;
-  font-size: 0.7rem;
   font-style: italic;
   display: inline;
 }
 
 #Content-container #Homepage-text {
-  border-top: solid 2px #796F5B;
   font-family: "Raleway", sans-serif;
   text-align: center;
-  padding-top: 5vh;
-  margin: 5vh 10vw 10vh 10vw;
+  margin: 7%;
 }
 
 #Content-container #Tossing-pizza-container {
@@ -126,6 +124,7 @@ html {
   width: 100%;
   position: relative;
   left: 30vw;
+  margin-bottom: 10vh;
 }
 
 #Content-container #Opening-hours {
@@ -184,6 +183,16 @@ html {
           align-items: center;
 }
 
+.Menu-grid .Buy-now-button {
+  -webkit-box-shadow: 1px 1px 3px #000000;
+          box-shadow: 1px 1px 3px #000000;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: solid 2px #000000;
+}
+
 .Menu-grid .Menu-images {
   width: 90%;
   border-radius: 10px;
@@ -213,14 +222,38 @@ html {
   color: #796F5B;
 }
 
+#Header-video-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100VW;
+      grid-template-columns: 100VW;
+  -ms-grid-rows: auto 60vh;
+      grid-template-rows: auto 60vh;
+  justify-items: center;
+}
+
+#Header-video-grid #Page-header {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.9rem;
+  color: #796F5B;
+  text-align: center;
+  margin: 10vh 5vw 10vh 5vw;
+  padding-bottom: 2vh;
+  border-bottom: solid 2px #796F5B;
+}
+
+#Header-video-grid #Pizza-video {
+  height: 100%;
+}
+
 #About-us-grid {
   display: -ms-grid;
   display: grid;
-  margin: 10vh 6vw 5vh 6vw;
-  -ms-grid-columns: 2fr 1fr;
-      grid-template-columns: 2fr 1fr;
-  -ms-grid-rows: 3fr 2fr;
-      grid-template-rows: 3fr 2fr;
+  margin: 20vh 6vw 5vh 6vw;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
   justify-items: center;
   -webkit-column-gap: 4vw;
           column-gap: 4vw;
@@ -246,13 +279,19 @@ html {
   font-style: italic;
 }
 
-#About-us-grid #Pizza-video {
-  width: 100%;
-  height: auto;
-}
-
 #About-us-grid #Who-are-we-image {
   width: 100%;
+}
+
+#About-us-grid #Pizza-on-table-image {
+  width: 100%;
+}
+
+#About-us-grid .About-us-images {
+  border: 1px solid #796F5B;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 2px #796F5B;
+          box-shadow: 1px 1px 2px #796F5B;
 }
 
 #Location {
@@ -261,7 +300,7 @@ html {
 
 #Location #Location-header {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.9rem;
   color: #796F5B;
   border-top: solid 2px #796F5B;
   text-align: center;
@@ -337,14 +376,14 @@ html {
   }
 }
 
-@media (max-width: 412px) {
+@media (max-width: 430px) {
   #Header-container {
-    top: -120px;
+    top: -128px;
     -ms-grid-rows: 17vh (6vh)[3];
         grid-template-rows: 17vh repeat(3, 6vh);
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    row-gap: 2px;
+    row-gap: 4px;
   }
   #Empty-div {
     display: none;
@@ -355,19 +394,19 @@ html {
   #Phonenumber-text {
     display: none;
   }
-  #Content-container #Homepage-text {
-    padding-top: 5vh;
-    margin: 0vh 10vw 3vh 10vw;
-  }
   #Content-container #Hungry-banner {
     height: 40vh;
   }
   #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
-    top: 5vh;
-    left: 20%;
+    top: 6vh;
+    left: 17%;
     width: 60%;
-    height: 30%;
+    height: auto;
+    font-size: 0.8rem;
+  }
+  #Content-container #Hungry-banner #Hungry-text #Hungry-question {
+    font-size: 1.2rem;
   }
   #Content-container #Tossing-pizza-container {
     width: 100vw;
@@ -375,9 +414,12 @@ html {
   #Content-container #Tossing-pizza-container #Tossing-pizza {
     left: 0;
   }
+  #Content-container #Homepage-text {
+    margin: 5vh 10vw 5vh 10vw;
+  }
   #Content-container #Opening-hours {
     font-size: 1.8rem;
-    margin: 5vh 10vw 5vh 10vw;
+    margin: 0vh 10vw 5vh 10vw;
   }
   #About-us-grid {
     -ms-grid-columns: 1fr;
@@ -387,6 +429,26 @@ html {
   }
   #Location #Maps-location {
     height: 400px;
+  }
+}
+
+@media (max-width: 375px) {
+  #Header-container {
+    top: -105px;
+  }
+  #Content-container #Hungry-banner {
+    height: 40vh;
+  }
+  #Content-container #Hungry-banner #Hungry-text {
+    position: absolute;
+    top: 5vh;
+    left: 17%;
+    width: 60%;
+    height: auto;
+    font-size: 0.8rem;
+  }
+  #Content-container #Hungry-banner #Hungry-text #Hungry-question {
+    font-size: 1.2rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
