--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
+@-webkit-keyframes Move {
+  from {
+    margin-top: 20vh;
+    opacity: 0;
+  }
+  to {
+    margin-top: 7vh;
+    opacity: 1;
+  }
+}
+
+@keyframes Move {
+  from {
+    margin-top: 20vh;
+    opacity: 0;
+  }
+  to {
+    margin-top: 7vh;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes Fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes Fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -32,9 +72,9 @@ html {
   justify-items: center;
   font-family: "Montserrat", sans-serif;
   color: #F2E8D9;
-  -webkit-box-shadow: 2px 0px 2px #000000;
-          box-shadow: 2px 0px 2px #000000;
-  font-size: 1.2rem;
+  -webkit-box-shadow: 3px 0px 3px #000000;
+          box-shadow: 3px 0px 3px #000000;
+  font-size: 1.3rem;
   -ms-grid-columns: (minmax(216px, auto))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(216px, auto));
 }
@@ -79,6 +119,8 @@ html {
   background-image: url(../Images/Pizza.jpg);
   background-repeat: no-repeat;
   background-size: 100vw;
+  -webkit-animation: Fade 3s;
+          animation: Fade 3s;
 }
 
 #Content-container #Hungry-banner #Hungry-text {
@@ -93,7 +135,9 @@ html {
   padding-right: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border: solid 2px #000000;
+  border: solid 1px #000000;
+  border-radius: 3px;
+  background-color: rgba(10, 10, 10, 0.6);
 }
 
 #Content-container #Hungry-banner #Hungry-text #Hungry-question {
@@ -116,6 +160,18 @@ html {
   margin: 7%;
 }
 
+#Content-container #Video-container {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+}
+
+#Content-container #Video-container #Pizza-video {
+  max-width: 800px;
+  margin-bottom: 10vh;
+}
+
 #Content-container #Tossing-pizza-container {
   width: 40vw;
 }
@@ -125,13 +181,15 @@ html {
   position: relative;
   left: 30vw;
   margin-bottom: 10vh;
+  border: #000000 solid 1.2px;
+  border-radius: 5px;
 }
 
 #Content-container #Opening-hours {
   padding: 10vh 7vw 10vh 7vw;
   margin: 15vh 10vw 15vh 10vw;
-  border-bottom: solid 2px #796F5B;
-  border-top: solid 2px #796F5B;
+  border-bottom: solid 2px #000000;
+  border-top: solid 2px #000000;
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   text-align: center;
@@ -141,15 +199,17 @@ html {
   font-family: "Montserrat", sans-serif;
   margin: 7vh 5vw 0vh 5vw;
   padding-bottom: 4px;
-  color: #796F5B;
-  font-size: 1.2rem;
-  border-bottom: solid 2px #796F5B;
+  color: #000000;
+  font-size: 1.7rem;
+  border-bottom: solid 2px #000000;
+  -webkit-animation: Move 2s;
+          animation: Move 2s;
 }
 
 .Menu-grid {
   display: -ms-grid;
   display: grid;
-  margin: 5vh 5vw 2vh 5vw;
+  margin: 5vh 5vw 5vh 5vw;
   width: 90vw;
   -ms-grid-columns: (minmax(275px, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
@@ -157,13 +217,17 @@ html {
           column-gap: 5vh;
   row-gap: 6vh;
   justify-items: center;
+  -webkit-animation: Fade 3s;
+          animation: Fade 3s;
 }
 
 .Menu-grid .Pizza-item-container {
   width: 330px;
-  height: 415px;
+  height: 470px;
   background-color: white;
-  border: 1px solid #796F5B;
+  border: 1.2px solid #796F5B;
+  -webkit-box-shadow: 0px 0px 2px;
+          box-shadow: 0px 0px 2px;
   border-radius: 5px;
   text-align: center;
   -webkit-box-align: center;
@@ -173,9 +237,9 @@ html {
 
 .Menu-grid .Menu-item-container {
   width: 340px;
-  height: 200px;
+  height: 250px;
   background-color: white;
-  border: 1px solid #796F5B;
+  border: 1.2px solid #000000;
   border-radius: 5px;
   text-align: center;
   -webkit-box-align: center;
@@ -184,72 +248,69 @@ html {
 }
 
 .Menu-grid .Buy-now-button {
-  -webkit-box-shadow: 1px 1px 3px #000000;
-          box-shadow: 1px 1px 3px #000000;
+  -webkit-box-shadow: 1px 1px 2px #000000;
+          box-shadow: 1px 1px 2px #000000;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border: solid 2px #000000;
+  border: solid 1px #000000;
+  border-radius: 3px;
+  margin: 0% 30% 5% 30%;
+  font-family: "Montserrat", sans-serif;
+  color: #A73127;
 }
 
 .Menu-grid .Menu-images {
   width: 90%;
   border-radius: 10px;
+  opacity: 0.8;
+}
+
+.Menu-grid .Menu-images:hover {
+  opacity: 1.0;
 }
 
 .Menu-grid .Menu-header {
   font-size: 1.1rem;
   font-family: "Montserrat", sans-serif;
-  color: #A73127;
-  margin: 5px;
+  color: #000000;
+  margin: 10px;
   padding: 2px;
   display: inline-block;
 }
 
 .Menu-grid .Menu-prices {
   font-family: "Raleway", sans-serif;
-  color: #796F5B;
+  color: #A73127;
   font-size: 1.1rem;
   display: inline-block;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .Menu-grid .Menu-text {
   font-size: 0.8rem;
   font-family: "Raleway", sans-serif;
-  margin: 4px;
+  margin: 10px;
   color: #796F5B;
 }
 
-#Header-video-grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 100VW;
-      grid-template-columns: 100VW;
-  -ms-grid-rows: auto 60vh;
-      grid-template-rows: auto 60vh;
-  justify-items: center;
-}
-
-#Header-video-grid #Page-header {
+#Page-header {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.9rem;
-  color: #796F5B;
+  font-size: 1.7rem;
+  color: #000000;
   text-align: center;
-  margin: 10vh 5vw 10vh 5vw;
+  margin: 7vh 5vw 0vh 5vw;
   padding-bottom: 2vh;
-  border-bottom: solid 2px #796F5B;
-}
-
-#Header-video-grid #Pizza-video {
-  height: 100%;
+  border-bottom: solid 2px #000000;
+  -webkit-animation: Move 2s;
+          animation: Move 2s;
 }
 
 #About-us-grid {
   display: -ms-grid;
   display: grid;
-  margin: 20vh 6vw 5vh 6vw;
+  margin: 15vh 10vw 10vh 10vw;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 1fr 1fr;
@@ -258,13 +319,18 @@ html {
   -webkit-column-gap: 4vw;
           column-gap: 4vw;
   row-gap: 5vh;
+  -webkit-animation: Move 2s;
+          animation: Move 2s;
+  -webkit-animation: Fade 3s;
+          animation: Fade 3s;
 }
 
 #About-us-grid .About-us-header {
   padding: 5px 1px 7px 1px;
-  border-bottom: solid 2px #796F5B;
+  margin-bottom: 5px;
+  border-bottom: solid 2px #000000;
   font-family: "Montserrat", sans-serif;
-  color: #796F5B;
+  color: #000000;
 }
 
 #About-us-grid .About-us-text {
@@ -301,8 +367,8 @@ html {
 #Location #Location-header {
   font-family: "Montserrat", sans-serif;
   font-size: 1.9rem;
-  color: #796F5B;
-  border-top: solid 2px #796F5B;
+  color: #000000;
+  border-top: solid 2px #000000;
   text-align: center;
   margin-left: 4vw;
   margin-right: 4vw;
@@ -340,6 +406,7 @@ html {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     font-size: 1.2rem;
+    top: 0px;
   }
   #Empty-div {
     display: none;
@@ -356,19 +423,23 @@ html {
   #Content-container #Hungry-banner #Hungry-text {
     position: absolute;
     top: 13vh;
-    left: 57%;
-    width: 40%;
-    height: 30%;
+    left: 33%;
   }
   #Content-container #Opening-hours {
     font-size: 2.0rem;
+  }
+  #Content-container #Video-container #Pizza-video {
+    max-width: 100vw;
+  }
+  #Pizza-menu .Menu-grid .Pizza-item-container .Menu-images {
+    opacity: 1.0;
   }
   #About-us-grid {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-    margin: 2vh 3vw 3vh 3vw;
+    margin: 2vh 4vw 3vh 4vw;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -408,11 +479,8 @@ html {
   #Content-container #Hungry-banner #Hungry-text #Hungry-question {
     font-size: 1.2rem;
   }
-  #Content-container #Tossing-pizza-container {
-    width: 100vw;
-  }
-  #Content-container #Tossing-pizza-container #Tossing-pizza {
-    left: 0;
+  #Content-container #Video-container #Pizza-video {
+    max-width: 100vw;
   }
   #Content-container #Homepage-text {
     margin: 5vh 10vw 5vh 10vw;
@@ -421,11 +489,14 @@ html {
     font-size: 1.8rem;
     margin: 0vh 10vw 5vh 10vw;
   }
+  #Pizza-menu .Menu-grid .Pizza-item-container .Menu-images {
+    opacity: 1.0;
+  }
   #About-us-grid {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 190px 1fr 220px 1fr;
-        grid-template-rows: 190px 1fr 220px 1fr;
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
   }
   #Location #Maps-location {
     height: 400px;
